<resources>
    <string name="app_name">League of Legends Esports App</string>
    <string name="login_title">Log In</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="signup_question">Don\'t have an account?</string>
    <string name="signin_question">Already have an account?</string>
    <string name="signin_button">Login here!</string>
    <string name="signup_button">Sign Up</string>
    <string name="register_title">Create an Account</string>
    <string name="users_username">(TEMP)MaseLoL</string>
    <string name="users_team">(TEMP)Counter Logic Gaming</string>
    <string name="logout_button">Sign Out</string>
    <string-array name="lcs_teams">
        <item>Pick a Favourite Team</item>
        <item>Team SoloMid</item>
        <item>Evil Genius</item>
        <item>Counter Logic Gaming</item>
        <item>FlyQuest</item>
        <item>Team Liquid</item>
        <item>Golden Guardians</item>
        <item>Immortals</item>
        <item>Dignitas</item>
        <item>Cloud9</item>
        <item>100 Thieves</item>
    </string-array>
</resources>