<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:paddingLeft="10dp"
    android:paddingTop="50dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    tools:context=".Registration">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTitle"
        android:backgroundTint="@color/buttons"
        android:hint="@string/username_hint"
        android:includeFontPadding="true"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameInput"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/buttons"
        android:hint="@string/email_hint"
        android:includeFontPadding="true"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInput"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/buttons"
        android:hint="@string/password_hint"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordInput"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/buttons"
        android:hint="@string/confirm_password_hint"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/favouriteTeam"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordInput"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/buttons" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favouriteTeam"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/signup_button"
        android:textAllCaps="false"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signin_question"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/signin_button"
            android:textAlignment="center"
            android:textColor="@color/buttons"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>